[DDW-674] Introduce a fix for truncated Add Wallet screen while wallet is restored

--- a/source/renderer/app/components/wallet/WalletAdd.scss
+++ b/source/renderer/app/components/wallet/WalletAdd.scss
@@ -1,8 +1,7 @@
 .component {
-  height: 100%;
-  display: flex;
   align-items: center;
-  justify-content: center;
+  display: flex;
+  flex: 1;
 }
 
 .notification {
@@ -17,8 +16,7 @@
 
 .buttonsContainer {
   max-width: 640px;
-  display: flex;
-  flex-direction: column;
+  margin: auto;
 }
 
 .firstRow {
